{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "a9c5b4a2-7ad4-47dd-af29-c613e0dbbaff",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "23659c82-b1aa-4b2d-98f3-c85e8e7c68c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "cbc48561-04be-4829-8a6f-c76128f669ed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "edc08878-2368-437d-8769-6a17bee56f53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d54a7384-1b5e-4a68-94d5-f565b35009d2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "971d6343-dd49-413f-9096-42258e80014c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "062bb784-a908-49a6-bdc2-6eb2a017243a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}